--- a/style.css
+++ b/style.css
@@ -1,4 +1,67 @@
-body{ background-color: rgb(129, 243, 23);
-color: blue;
+body { background-color: rgb(0, 0, 0);
+    color: rgb(15, 15, 14);
+    font-size: 20px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    justify-content: center;
+    justify-items: center;
+    text-align: center;
+} .imagem-cabecalho{width: 450px;}
+
+.titulocabecalho
+{display: inline-block;
+  margin:0 16px;
+  padding: px 250;
+  font-size: 40px;}
+
+.escola-titulo{
+  font-size: 50px;
 }
 
+
+  .cabecalho {background-color: rgb(255, 0, 0);
+color: rgb(3, 3, 3);
+display: flex;
+justify-content: space-around; 
+padding: 20px 0;}
+
+.cabecalho-itens
+{display: inline-block;
+margin: 0 16px;
+padding: 24px 0;
+font-size: 24px;}
+
+.escola-imagem
+{width: 100%;}
+
+.escola {
+  background-image: linear-gradient(rgb(255, 0, 0), rgb(0, 0, 0));
+  color: azure;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 24px 0;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.escola-conteudo
+{width: 350;}
+
+
+.escola-titulo{}
+   
