--- a/style.css
+++ b/style.css
@@ -1,67 +1,47 @@
-body { background-color: rgb(0, 0, 0);
-    color: rgb(15, 15, 14);
-    font-size: 20px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+body{background-color: rgb(230, 36, 10);
+    color: rgb(17, 17, 17);
+    font-size: 40px;
+    font-family: cursive;
     justify-content: center;
     justify-items: center;
     text-align: center;
-} .imagem-cabecalho{width: 450px;}
-
-.titulocabecalho
-{display: inline-block;
-  margin:0 16px;
-  padding: px 250;
-  font-size: 40px;}
-
-.escola-titulo{
-  font-size: 50px;
+    text-align: center;text-align: center;
 }
 
+.imagem-cabecalho{
+width: 200px;
+}
+.cabecalho{
+    background-color: rgb(187, 20, 8);
+    color: black;
+    display: flex;
+    justify-content: space-around;
+    padding: 24px 0;}
 
-  .cabecalho {background-color: rgb(255, 0, 0);
-color: rgb(3, 3, 3);
-display: flex;
-justify-content: space-around; 
-padding: 20px 0;}
-
-.cabecalho-itens
+.cabecalho-item
 {display: inline-block;
 margin: 0 16px;
 padding: 24px 0;
 font-size: 24px;}
 
-.escola-imagem
-{width: 100%;}
-
-.escola {
-  background-image: linear-gradient(rgb(255, 0, 0), rgb(0, 0, 0));
-  color: azure;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 24px 0;
+.escola-imagem{
+    width: 25%;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    
+.escola{
+    background-image: linear-gradient(rgb(248, 10, 10), rgb(250, 250, 252));
+    color: rgb(12, 12, 12);
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    padding: 24px 0;
+}
 
 .escola-conteudo
-{width: 350;}
+{width: 50%;}
 
-
-.escola-titulo{}
-   
+.escola-titulo
+{padding: 50px 30px;
+width: 25%;
+font-family: cursive; } 
