--- a/style.css
+++ b/style.css
@@ -45,3 +45,16 @@ font-size: 24px;}
 {padding: 50px 30px;
 width: 25%;
 font-family: cursive; } 
+
+
+.aluno-um{     
+   width:  40%;
+   height: 220px;
+}  
+
+.estudante-titulo
+{
+    text-align: center;
+padding: 50px 0;
+font-size: 30px
+}
